# NEOcode

./: .env.example  .gitignore  Makefile  README.md  build.sh  env.txt  pyproject.toml  vercel.json
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
api/: index.py
problems/: admin.py  models.py  urls.py  views.py
problems/migrations/: 0001_initial.py  0002_rename_problems_problem.py  0003_alter_category_options_alter_problem_options.py  0003_testcase.py  0004_merge_20260130_0604.py  0005_alter_testcase_input_data.py
root/: settings.py  urls.py  views.py
submissions/: admin.py  models.py  runner.py
submissions/migrations/: 0001_initial.py  0002_submission_code.py
templates/: base.html  home.html
templates/problems/: problem_detail.html  problem_list.html
