[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "dj-database-url>=2.2.0",
    "gunicorn>=25.0.1",
    "whitenoise>=6.11.0",
]
